--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -4,6 +4,7 @@
 
 $background_image: '{{site.background_image}}';
 
+@import 'breakpoint';
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
